# resumeio-to-pdf

./: .gitignore  Dockerfile  README.md  create_stdin.js  pyproject.toml  resume_24253312.json  run_renderer.py  tmp_input_test.js  tmp_payload.json  tmp_pipe_reader.js  tmp_read_stdin.js  tmp_search_worker.py  tmp_stdin_test.js  validate_json.js
app/: main.py
app/api/: api.py
app/renderer/: render.mjs
app/renderer/.worker_cache/: payload_debug.json  preview.html  rendering.js
app/renderer/.worker_cache/assets/workers/: vendors.4a4a6aee1b6a50afb962.js
app/services/: resumeio.py
templates/: index.html
tools/: debug_builder_js.py  debug_worker_fetch.py  download_images_debug.py  download_images_sizes.py  download_vendor_test.py  puppeteer_render.py  run_downloader.py
