[project]
name = "resumeio-to-pdf"
version = "1.0.0"
description = "Download your resume from resume.io as PDF"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "fastapi==0.136.1",
    "jinja2==3.1.6",
    "python-multipart==0.0.27",
    "requests==2.33.1",
    "uvicorn==0.46.0",
]
[dependency-groups]
dev = [
    "black==26.3.1",
    "ruff==0.15.12",
]

[tool.black]
line-length = 120
verbose = true
preview = true

[tool.ruff]
line-length = 120
lint.select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    "N",  # pep8-naming
    "COM",  # flake8-commas
    "Q",  # flake8-quotes
]
